--- a/application/views/scripts/member/member-search.phtml
+++ b/application/views/scripts/member/member-search.phtml
@@ -46,8 +46,9 @@ if ($this->searchedMembers) {
                 <span>Category : <?php echo $member->getPrimaryCategory()->getCategoryTitle();?></span>
                 <span>Member since : <?php echo date('d M Y',strtotime($member->getCreatedOn()))?></span>
                 <span>Rating : <?php echo $member->getRating()?></span>
+                <span>Projects Open : <?php echo $member->getOpenProjects()?></span>
                 <span>Projects Complete : <?php echo $member->getUserHired()?></span>
-                <span>Location : <?php //echo getCountryFullName($member->getCountry())?></span>
+                <span>Location : <?php echo $member->getCountry()?></span>
             </div>
             <div class="clear"></div>
         </div>
